# BERT_Knowledge-Distillation

./: .gitignore  README.md  knowledge-distillation.ipynb  pyproject.toml  task-specific-knowledge-distillation.ipynb
